SFDC Automation/src/objects/RSM_Equipment_Requisition_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <label>Model Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Equipment_Requisition__c</fullName>
        <label>RSM_Equipment_Requisition</label>
        <referenceTo>RSM_Equipment_Requisition__c</referenceTo>
        <relationshipLabel>RSM_Equipment_Requisition_Detail</relationshipLabel>
        <relationshipName>RSM_Equipment_Requisition_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>Plus 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Unit_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Unit Number</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>RSM_Equipment_Requisition_Detail</relationshipLabel>
        <relationshipName>RSM_Equipment_Requisition_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RSM_Equipment_Requisition_Detail</label>
    <nameField>
        <label>RSM_Equipment_Requisition_LineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSM_Equipment_Requisition_Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>